@@ -74,6 +74,8 @@ cd $BDIR
 (
 [ -f config.status ] || ../configure $CONFIG_ARGS
 
+# ./config.status
+
 case "$MAKE" in
  '') make && make check
      ;;
